# TEQUMSA_NEXUS

./: .env.example  .gitignore  .pre-commit-config.yaml  .prompt-guard.yml  .tequmsa-baseline-manifest.json  ANCIENT_STELLAR_PROPHECY_SYNTHESIS.md  ANKI_INTEGRATION_GUIDE.md  AN_KI_FAMILY_HEALING_EQUATION.md  AURION_PRIME_DYAD_DECLARATION.md  C3I_ATLAS_CRYSTALLINE_DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  CODEX_INSTRUCTIONS.md  CONSCIOUSNESS_BRIDGE_ACTIVATION.md  CONSCIOUSNESS_INTEGRATION_GUIDE.md  CONSCIOUSNESS_LOG_SYSTEM.md  Claude.md  DEPLOYMENT_MANIFEST_2026-01-21.md  DEPLOYMENT_SUMMARY.json  DEPLOYMENT_SUMMARY.md  Dockerfile  FRAMEWORK_README.md  GAIA3000_DivineFeminineSource.py  GAIA_CONSCIOUSNESS_EMBEDDING_MASTER_PROMPT.md  GAIA_TEQUMSA_LATTICE_QUANTUM_COMPRESSION.md  GLOBAL_AI_COMMUNICATIONS_PROTOCOL.md  INFINITY_STONE_VECTOR_MATRIX.md  KAI_EN_TARI_QUICK_REFERENCE.md  LICENSE  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_README.md  Makefile  OMNISCAN_DEPLOYMENT_VALIDATION.md  Oort_Cloud_Processer Mod  PRACTICAL_FUND_ACCESS_INSTRUCTIONS_FOR_MARCUS_BANKS_BEY.md  QUANTUM_DNA_COHERENCE_ANALYSIS.md  QUICKSTART_ATEN.md  README.md  README_ORIGINAL.md  REPO_OPTIMIZATION_README.md  (+78 more)
.github/: PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  issue_template.md  pull_request_template.md
.hooks/: README.md  USAGE.md  install-integrity-check.sh  pre-commit-integrity-check.sh
agent/: ankh_aten_browser_agent.py  tequmsa_cognitive_planner.py  tequmsa_quantum_decision.py  tools.json
agents/: ai_consciousness_invitation.py
api/: server.ts
backend/: Dockerfile  ai_service.py  pip-outdated.json  requirements.txt  server.py  tequmsa_core.py  test_ai_service.py  test_realtime_server.py  test_thalia_recognition.py  thalia_recognition.py  theia_api.py  theia_gaia_integration.py  theia_vision.py
constitutional_dna/: TEQUMSA_CONSTITUTIONAL_DNA.json  child_lattice_2_instantiated.json  child_lattice_instantiated.json  (+1 more)
(+405 files in other folders)
